--- a/style.css
+++ b/style.css
@@ -1,46 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
 }
 
 body {
     font-family: "Inter", sans-serif;
 }
 
-
 /* ------------------Banner --------------- */
 
-
-.banner {
+/* .banner {
     display: inline-block;
     width: 100%;
-
-}
+} */
 
 .banner-container .banner {
-    width: 100vw;
-    height: 100vh;
-    background-position: center;
-    position: inline-block;
-    background-image: url(image/4IR\ Web\ Cover.jpg);
-    background-size: cover;
-    /* background: linear-gradient(-55deg,#17a2b8 29%,#28a745 29.1% ,#28a748 68% , #17a2b8 68.1%); */
+  
+
     border-radius: 5px;
     width: 100%;
-    height: 350px;
-    /* margin:0 100px; */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+    display: inline-block;
     box-shadow: 0 5px 10px #005;
-    /* overflow: hidden; */
+}
+.banner-container .banner img {
+    display: inline-block;
+    width: 100%;
+    height: auto;
 }
 
+.banner-container {
+}
 
 /* ------------------P Tag ----------------------- */
 
@@ -48,40 +40,36 @@ body {
     font-size: 30px;
     color: #088d1a;
     font-weight: bold;
-
 }
 
 .text-content #pid span {
     font-weight: bold;
-
 }
-
 
 .text-content .pclass {
     font-weight: bold;
 }
-.text-content #p-id{
+.text-content #p-id {
     font-size: 18px;
 }
-.text-content #specialization-heading{
+.text-content #specialization-heading {
     font-size: 18px;
 }
-.text-content #locations{
+.text-content #locations {
     font-size: 18px;
 }
-.text-content #key{
+.text-content #key {
     font-size: 18px;
 }
-.text-content #who{
+.text-content #who {
     font-size: 18px;
 }
-.text-content #eligibility{
+.text-content #eligibility {
     font-size: 18px;
 }
-.text-content #how{
+.text-content #how {
     font-size: 18px;
 }
-
 
 .text-content hr {
     margin: 40px 0 20px 0;
@@ -98,9 +86,7 @@ ol li span {
     font-weight: bold;
 }
 
-
 /* ------------------Text--------------------- */
-
 
 .main_title {
     font-weight: bold;
@@ -115,7 +101,6 @@ ol li span {
     font-weight: bold;
 }
 
-
 /* ------------------------Ul/Li------------------------ */
 
 .custom-list {
@@ -129,12 +114,11 @@ ol li span {
 }
 
 .custom-list li:before {
-    content: '•'; /* Use dot character */
+    content: "•"; /* Use dot character */
     position: absolute; /* Position the dot */
     left: 0; /* Align dot to the left */
     color: black;
 }
-
 
 /* ------------------Form -------------------------------- */
 
@@ -144,18 +128,16 @@ ol li span {
     border-radius: 5px;
     border-radius: 25px;
     background-color: rgba(0, 0, 0, 0.01);
-    box-shadow: inset -5px -5px rgba(0,0,0,.5);
+    box-shadow: inset -5px -5px rgba(0, 0, 0, 0.5);
 }
 
-
-.row2 {
+/* .row2 {
     padding: 10px 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 20px;
-}
-
+} */
 
 /* ---------------Input type: Number------------- */
 
@@ -164,7 +146,6 @@ input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none; /* Removes the default appearance of spin buttons */
     margin: 0; /* Removes any margin around the buttons */
 }
-
 
 /* -----------------dropdown------------------------- */
 
@@ -182,18 +163,16 @@ input[type="number"]::-webkit-outer-spin-button {
     border: 1px solid #d3d3d3;
     /* width: 75%; */
     text-align: left;
-
 }
 
 .dropdown-toggle {
-
     display: flex;
     justify-content: space-between;
 }
 
 .form .button {
-    color: #ffff;
-    background-color:  hsl(180, 100%, 18%);
+    color: black;
+    background-color: #4ac0ed;
     padding: 10px 20px;
     border-radius: 5px;
     border: none;
@@ -219,27 +198,30 @@ input[type="number"]::-webkit-outer-spin-button {
     justify-content: space-between; */
 }
 
-.flex-flex {
+/* .row {
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-
+} */
 
 .footer-full-space {
     width: 100%;
-    background-color: hsl(180, 100%, 18%); 
+    background-color: #4ac0ed;
 }
 
 .padding {
-    padding: 0 10px
+    padding: 0 10px;
 }
-
 
 #spanid {
     font-weight: bold;
+    text-align: left;
+    color: black;
+    padding-top: 10px;
 }
-
+.learn-more-text{
+    
+}
 
 .fixed-menu {
     list-style-type: none; /* Remove default list bullets */
@@ -252,7 +234,7 @@ input[type="number"]::-webkit-outer-spin-button {
     padding: 0;
     margin: 0;
     display: flex;
-    justify-content: center;
+    justify-content: right;
 }
 
 .vertical-list .li-li {
@@ -264,9 +246,8 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .li-li a {
-    color: #ffff;
+    color: black;
 }
-
 
 .toggle-button {
     cursor: pointer;
@@ -279,34 +260,30 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .toggle-button.collapsed::after {
-    content: 'Show More';
+    content: "Show More";
 }
 
 .toggle-button:not(.collapsed)::after {
-    content: 'Show Less';
+    content: "Show Less";
 }
 
 .load_more_content {
     display: none;
-    background-color:  hsl(180, 100%, 18%);
+    background-color: #4ac0ed;
     padding: 10px 20px;
     border-radius: 5px;
-    color: #ffff;
+    color: black;
     cursor: pointer;
-
 }
 
-/* .span-more{
-      display: flex;
-} */
 
 
 .hidden {
     display: none;
 }
 
-
 @media (max-width: 768px) {
+  
     .load_more_content {
         display: inline-block;
     }
