--- a/style.css
+++ b/style.css
@@ -275,6 +275,12 @@ input[type="number"]::-webkit-outer-spin-button {
     color: black;
     cursor: pointer;
 }
+.load_more_content:hover{
+    border: 1px solid black;
+    background-color: #ffff;
+    color: black;
+    transition: all 0.5s ease;
+}
 
 
 
