--- a/style.css
+++ b/style.css
@@ -18,8 +18,6 @@ body {
 } */
 
 .banner-container .banner {
-  
-
     border-radius: 5px;
     width: 100%;
     display: inline-block;
@@ -218,8 +216,7 @@ input[type="number"]::-webkit-outer-spin-button {
     color: black;
     padding-top: 10px;
 }
-.learn-more-text{
-    
+.learn-more-text {
 }
 
 .fixed-menu {
@@ -274,21 +271,22 @@ input[type="number"]::-webkit-outer-spin-button {
     color: black;
     cursor: pointer;
 }
-.load_more_content:hover{
+.load_more_content:hover {
     border: 1px solid black;
     background-color: #ffff;
     color: black;
     transition: all 0.5s ease;
 }
 
-
-
 .hidden {
     display: none;
 }
+/* -------------------------------------------------modified----------------------------------------------- */
+.overview-class {
+    border: 1px solid #9999;
+}
 
 @media (max-width: 768px) {
-  
     .load_more_content {
         display: inline-block;
     }
